Prevent wrapping of cursor to next line, which occurs specifically in Safari browser

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -75,6 +75,7 @@
   top: 0;
   color: rgb(0, 204, 255);
   opacity: 1;
+  white-space: nowrap;
 }
 
 .slideUp {
